# ggseq

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  acinclude.m4  configure.ac  ggseq-0.3.1.ebuild  ggseq.desktop  ggseq.spec  reconf  rpm_build.sh
config/: Makefile.am
doc/: Makefile.am  contents.html  formats.html  ggseq.hhc  ggseq.hhk  ggseq.hhp  ggseq.htb  ggseq.html  keyboard.html  make_help_file  shortcuts.html  sound_formats.html  tutorial.html
doc/pics/: Makefile.am
icons/: Makefile.am  colours2.xpm  dir.xpm  dndfile.xpm  drop_down_mini.xpm  ggseq_32.xpm  gun_girl.xpm  help.xpm  mute_off.xpm  mute_on.xpm  new1.xpm  null.xpm  open.xpm  play.xpm  play_12.xpm  prefs_misc.xpm  redo.xpm  rewind.xpm  save.xpm  saveas.xpm  snap.xpm  stop.xpm  stop_12.xpm  undo.xpm  wav_export.xpm
scripts/: INSTALL_static_bin  install  make_static_build  make_static_package  uninstall
src/: .cvsignore  BigScrollBar.cpp  BigScrollBar.h  DisableListener.cpp  DisableListener.h  EnvelopeDragHandler.cpp  EnvelopeDragHandler.h  FileInfoPanel.cpp  FileInfoPanel.h  GgseqDocManager.cpp  GgseqDocManager.h  GgseqGlobalProps.cpp  GgseqGlobalProps.h  ImportPackDialog.cpp  ImportPackDialog.h  Listeners.h  Makefile.am  MiniFilerTest.cpp  MiniPlayer.cpp  MiniPlayer.h  MouseDragHandler.cpp  MouseDragHandler.h  PlayerInterface.cpp  PlayerInterface.h  PreferencesDialog.cpp  PreferencesDialog.h  RubberDragHandler.cpp  RubberDragHandler.h  Ruler.cpp  Ruler.h  SConstruct  SampleEdit.cpp  SampleEdit.h  SampleExtendingHandler.cpp  SampleExtendingHandler.h  SelectionDragHandler.cpp  SelectionDragHandler.h  ShortcutsDialog.cpp  ShortcutsDialog.h  SidePanel.cpp  (+60 more)
src/SoundTouch/: 3dnow_win.cpp  AAFilter.cpp  AAFilter.h  BPMDetect.h  FIFOSampleBuffer.cpp  FIFOSampleBuffer.h  FIFOSamplePipe.h  FIRFilter.cpp  FIRFilter.h  Makefile.am  RateTransposer.cpp  RateTransposer.h  STTypes.h  SoundTouch.cpp  SoundTouch.h  TDStretch.cpp  TDStretch.h  cpu_detect.h  cpu_detect_x86_gcc.cpp  cpu_detect_x86_win.cpp  get_soundtouch_1.3.0  mmx_gcc.cpp  mmx_win.cpp  soundtouch_1.3.0.patch  sse_win.cpp
src/portaudio/: Makefile.am  get_portaudio_v18_1  pa_host.h  pa_lib.c  pa_trace.c  pa_trace.h  portaudio.h
