# Copyright (C) 2003 Richard Spindler <oracle2025@gmx.de>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = colours2.xpm       new1.xpm  play.xpm    save.xpm dir.xpm \
        null.xpm  rewind.xpm  stop.xpm dndfile.xpm     open.xpm  saveas.xpm \
				wav_export.xpm ggseq_32.xpm snap.xpm  mute_off.xpm mute_on.xpm \
				play_12.xpm stop_12.xpm prefs_misc.xpm gun_girl.xpm help.xpm \
				undo.xpm redo.xpm  drop_down_mini.xpm ggseq_128.png \
				ggseq_document_256.ico ggseq_256.ico uninst_256.ico
SUBDIRS =
# -- the following would install the app icon, but I have to
# -- ask georg if this is the 'right' way to do things :)
# install-data-local:
#	$(mkinstalldirs) $(prefix)/share/icons/
#	$(INSTALL_DATA) $(srcdir)/ggseq_32.xpm $(prefix)/share/icons/ggseq_32.xpm
