# Copyright (C) 2003 Richard Spindler <oracle2025@gmx.de>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = 10.png  13.png  16.png  1.png  4.png\
   7.png  ggseq_3d_icon_32.png\
   11.png  14.png  17.png  2.png  5.png  8.png  ggseq_3d_icon.png\
   12.png  15.png  18.png  3.png  6.png  9.png
SUBDIRS =
