# Copyright (C) 2003 Richard Spindler <oracle2025@gmx.de>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

noinst_LIBRARIES = libportaudio.a

libportaudio_a_SOURCES =              \
                         pa_lib.c     \
												 pa_host.h    \
                         pa_unix.h    \
												 pa_trace.h   \
                         portaudio.h  \
                         pa_unix.c    \
                         pa_unix_oss.c

